<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_dialog_main_battle"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/button_1" >
	
    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
	    <TextView
	        android:id="@+id/dialog_title_battle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/dialog_title_battle"
			android:textSize="24dp"
	        android:textColor="@color/font" />
	    
	    <Button
	        android:id="@+id/button_dialog_main_battle_shadow"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dialog_button_battle_shadow"
			android:textSize="24dp"
			android:textColor="@color/font"
			android:background="@layout/button"
			android:gravity="center_vertical|center_horizontal" />
	    
	    <Button
	        android:id="@+id/button_dialog_main_battle_bluetooth"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dialog_button_battle_bluetooth"
			android:textSize="24dp"
			android:textColor="@color/font"
			android:background="@layout/button"
			android:gravity="center_vertical|center_horizontal" />

		<Button
			android:id="@+id/button_dialog_main_battle_wifi"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dialog_button_battle_wifi"
			android:textSize="24dp"
			android:textColor="@color/font"
			android:background="@layout/button"
			android:gravity="center_vertical|center_horizontal" />
	    
	    <Button
	        android:id="@+id/button_dialog_main_battle_cancel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/dialog_button_battle_cancel"
			android:textSize="24dp"
			android:textColor="@color/font"
			android:background="@layout/button"
			android:gravity="center_vertical|center_horizontal" />
	    
	</LinearLayout>
    
</ScrollView>
