<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blueprint" >
    
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    
	    <TextView
	        android:id="@+id/text_options_holiday"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
			android:textSize="28dp"
	        android:background="@layout/button" />
	    
	    <Button
	        android:id="@+id/button_options_config"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:onClick="button_config"
	        android:text="@string/name_config"
	        android:textSize="24dp"
	        android:textColor="@color/font"
	        android:background="@layout/button" />
	    
	    <Button
	        android:id="@+id/button_options_records"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:onClick="button_records"
	        android:text="@string/name_records"
	        android:textSize="24dp"
	        android:textColor="@color/font"
	        android:background="@layout/button" />
	    
	    <Button
	        android:id="@+id/button_options_help"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:onClick="button_help"
	        android:text="@string/name_help"
	        android:textSize="24dp"
	        android:textColor="@color/font"
	        android:background="@layout/button" />
	    
	    <Button
	        android:id="@+id/button_options_about"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:onClick="button_about"
	        android:text="@string/name_about"
	        android:textSize="24dp"
	        android:textColor="@color/font"
	        android:background="@layout/button" />
	    
	    <Button
	        android:id="@+id/button_options_credits"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:onClick="button_credits"
	        android:text="@string/name_credits"
	        android:textSize="24dp"
	        android:textColor="@color/font"
	        android:background="@layout/button" />
	    
	    <Button
	        android:id="@+id/button_options_reset"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:onClick="button_reset"
	        android:text="@string/button_options_reset"
	        android:textSize="24dp"
	        android:textColor="@color/font"
	        android:background="@layout/button" />
	    
	    <Button
	        android:id="@+id/button_options_exit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal"
	        android:onClick="button_exit"
	        android:text="@string/button_options_exit"
	        android:textSize="24dp"
	        android:textColor="@color/font"
	        android:background="@layout/button" />
	
	</LinearLayout>
	
</ScrollView>
