<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_inventory"
    android:orientation="vertical"
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background_blueprint" >
	
    <LinearLayout
        android:id="@+id/ll_inventory"
        android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@layout/button" >
		
        <LinearLayout
	        android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
		
	        <Button
		        android:id="@+id/button_inventory_sell"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		        android:onClick="button_sell_checked"
		        android:textSize="16dp"
		        android:textColor="@color/font"
		        android:text="@string/button_inventory_sell"
		        android:background="@layout/button" />
			
		    <CheckedTextView
				android:id="@+id/checkbox_inventory_all"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="right|center_vertical"
				android:textSize="16dp"
				android:textColor="@color/font"
				android:text="@string/checkbox_toggle_all"
				android:checkMark="?android:attr/listChoiceIndicatorMultiple"
				android:checkMarkTint="@color/button_2"
				android:checked="false"
				android:onClick="button_toggle_all"
				android:clickable="true"
				android:focusable="true" />
	    
	    </LinearLayout>
	    
        <RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
		
	        <Button
		        android:id="@+id/button_inventory_back"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_alignParentLeft="true"
		        android:onClick="button_back"
		        android:textSize="16dp"
		        android:textColor="@color/font"
		        android:text="@string/button_back"
		        android:background="@layout/button_thin" />
	        
	        <Button
		        android:id="@+id/button_inventory_forward"
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_alignParentRight="true"
		        android:onClick="button_forward"
		        android:textSize="16dp"
		        android:textColor="@color/font"
		        android:text="@string/button_forward"
		        android:background="@layout/button_thin" />
	    
	    </RelativeLayout>
	    
	</LinearLayout>
	
	<ListView
	    android:id="@+id/list_view_inventory"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" />
	
</LinearLayout>
