<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_equip"
    android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background_blueprint" >
	    
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@layout/button" >
   
       <Button
        android:id="@+id/button_equip_inventory"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textSize="24dp"
		android:textColor="@color/font"
		android:text="@string/name_inventory_all"
		android:background="@layout/button"
		android:gravity="center_vertical|center_horizontal"
		android:onClick="button_inventory" />
   
	</LinearLayout>
        
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
       
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
	        
	        <TextView
				android:id="@+id/equip_message_weapon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="24dp"
			    android:textColor="@color/font"
			    android:text="@string/equip_weapon"
				android:gravity="center_vertical|center_horizontal" />
		    
		    <Button
		        android:id="@+id/button_equip_weapon"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="24dp"
				android:textColor="@color/font"
				android:background="@layout/button"
				android:gravity="center_vertical|center_horizontal"
				android:onClick="button_equip_weapon" />
		    
		    <TextView
				android:id="@+id/equip_message_head"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="24dp"
			    android:textColor="@color/font"
			    android:text="@string/equip_head"
				android:gravity="center_vertical|center_horizontal" />
		    
		    <Button
		        android:id="@+id/button_equip_head"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="24dp"
				android:textColor="@color/font"
				android:background="@layout/button"
				android:gravity="center_vertical|center_horizontal"
				android:onClick="button_equip_head" />
		    
		    <TextView
				android:id="@+id/equip_message_chest"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="24dp"
			    android:textColor="@color/font"
			    android:text="@string/equip_chest"
				android:gravity="center_vertical|center_horizontal" />
		    
		    <Button
		        android:id="@+id/button_equip_chest"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="24dp"
				android:textColor="@color/font"
				android:background="@layout/button"
				android:gravity="center_vertical|center_horizontal"
				android:onClick="button_equip_chest" />
		    
		    <TextView
				android:id="@+id/equip_message_feet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="24dp"
			    android:textColor="@color/font"
			    android:text="@string/equip_feet"
				android:gravity="center_vertical|center_horizontal" />
		    
		    <Button
		        android:id="@+id/button_equip_feet"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="24dp"
				android:textColor="@color/font"
				android:background="@layout/button"
				android:gravity="center_vertical|center_horizontal"
				android:onClick="button_equip_feet" />
		    
		</LinearLayout>
	
	</ScrollView>
    
</LinearLayout>
